Bug 94389 - compilerplugins install fails with clang version 3.7.0
Summary: compilerplugins install fails with clang version 3.7.0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-20 23:15 UTC by Daniel L Robertson
Modified: 2016-10-25 19:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Errors thrown when compiling compilerplugins with clang3.7.0 (1.77 KB, text/plain)
2015-09-20 23:15 UTC, Daniel L Robertson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel L Robertson 2015-09-20 23:15:55 UTC
Created attachment 118886 [details]
Errors thrown when compiling compilerplugins with clang3.7.0

I'm still a bit of a noobie, so I could be out of line here, but my install fails on Gentoo with the errors in the attachment and the following version of clang.

    clang version 3.7.0 (tags/RELEASE_370/final)
    Target: x86_64-pc-linux-gnu
    Thread model: posix
    Selected GCC installation /usr/lib/gcc/x86_64-pc-linux-gnu/4.9.3

According to http://clang.llvm.org/doxygen/classclang_1_1Stmt.html the second two errors are an easy fix, and it compiles if range.<begin/end>() is changed to range->child_<begin/end>().

The first error is a little more complicated as decl.forallBases(BaseMatches, AllowShortCircuit); is correct according to http://clang.llvm.org/doxygen/classclang_1_1CXXRecordDecl.html. However, according to what I have in my /usr/include/clang/AST/DeclCXX.h, decl.forallBases(BaseMatches, callback, AllowShortCircuit); should be used. I'll submit a patch shortly with what I get to compile.
Comment 1 Commit Notification 2015-09-21 13:55:15 UTC
Daniel Robertson committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ef779d339e202dacea30b68ca8014207171e9ce4

tdf#94389 compilerplugins: clang 3.7.0

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.