tdf#94389 compilerplugins: clang 3.7.0

Fix errors that occur in build with clang 3.7.0

Change-Id: I0e8743f2b6a288d10b4e78e884ce34cfca4dd77c